--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
       {
         "label": "J-Code",
         "uiTheme": "vs-dark",
-        "path": "./themes/j-code-color-theme.json"
+        "path": "./themes/jcode-theme.json"
       }
     ]
   },
